[tool.poetry]
name = "dbx-deploy"
version = "0.13.1"
description = "Databricks Deployment Tool"
readme = "README.md"
repository = "https://github.com/bricksflow/dbx-deploy"

license = "MIT"

authors = [
    "Jiri Koutny <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

include = ["*.yaml", "*.tpl"]

packages = [
    { include = "dbxdeploy", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
databricks-api = ">=0.3.0,<1.0.0"
dbx-notebook-exporter = "0.4.*"
nbconvert = "^5.6"
pygit2 = "^1.3"
python-box = "^3.4"
tomlkit = ">=0.5.8,<1.0.0"
pyfony-bundles = "^0.3.2"
console-bundle = "^0.3.1"
boto3 = "^1.16.0"
pyfony-core = "^0.7.1"

[tool.poetry.dev-dependencies]
pylint = "^2.4"
pytest = "^5.2"

[tool.poetry.plugins."pyfony.bundle"]
create = "dbxdeploy.DbxDeployBundle:DbxDeployBundle"

[pyfony.bootstrap]
containerInit = "pyfonycore.container.containerInit:initWithCurrentBundle"
rootModuleName = "dbxdeploy"
