[tool.poetry]
name = "dbx-deploy"
version = "1.3.2"
description = "Databricks Deployment Tool"
readme = "README.md"
repository = "https://github.com/daipe-ai/dbx-deploy"

license = "MIT"

authors = [
    "Jiri Koutny <jiri.koutny@datasentics.com>"
]

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

include = ["*.yaml", "*.tpl"]

packages = [
    { include = "dbxdeploy", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
dbx-notebook-exporter = "0.4.*"
nbconvert = "^5.6.0"
pygit2 = "^1.3"
python-box = "^3.4"
tomlkit = ">=0.5.8,<1.0.0"
pyfony-bundles = "0.4.*"
pyfony-core = "^0.8.1"
console-bundle = "^0.5"
Jinja2 = "^2.0.0"
databricks-cli = "^0.16.0"
daipe-core = ">=1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pyre-check = "^0.9.10"
poethepoet = "^0.10.0"
black = "^20.8b1"
pylint = "^2.12.2"

[tool.poetry.plugins."pyfony.bundle"]
create = "dbxdeploy.DbxDeployBundle:DbxDeployBundle"

[pyfony.bootstrap]
container_init = "pyfonycore.container.container_init:init_with_current_bundle"
root_module_name = "dbxdeploy"

[tool.black]
line-length = 140

[tool.pylint.basic]
module-rgx = "(([a-z_][a-z0-9_]*)|([A-Z][a-zA-Z0-9]+))$"

[tool.pylint.messages_control]
disable = [
    "missing-docstring",
    "wrong-import-order",
    "duplicate-code",
    "line-too-long",
    "bad-continuation",
    "too-many-arguments",
    "too-few-public-methods",
    "ungrouped-imports",
    "no-self-use",
    "too-many-locals",
    "too-many-instance-attributes",
]

good-names = ["e", "i", "k", "n", "f", "v", "df"]

[tool.poe.tasks]
black = "black src"
black-check = "black --check src"
pylint = "pylint src"
